--- a/app/views/links/index.erb
+++ b/app/views/links/index.erb
@@ -1,1 +1,10 @@
-<h1> Makers Academy </h1> 
+<h1> Links </h1>
+
+<ul id='links'>
+  <% @links.each do |link| %>
+    <li>
+      Title: <%= link.title %>
+      URL:   <%= link.url   %>
+    </li>
+  <% end %>
+</ul>
