--- a/app/views/links/index.erb
+++ b/app/views/links/index.erb
@@ -4,7 +4,11 @@
   <% @links.each do |link| %>
     <li>
       Title: <%= link.title %>
-      URL:   <%= link.url   %>
+      URL: <a href="<%= link.url   %>" target="_blank"><%= link.url   %></a>
     </li>
   <% end %>
 </ul>
+
+<form action='/links/new' method='get'>
+  <input type='submit' value='Add new'>
+</form>
