--- a/app/views/links/links_new.erb
+++ b/app/views/links/links_new.erb
@@ -3,5 +3,7 @@
   <input type='text' name='url'>
   <h1> Title </h1>
   <input type='text' name='title'>
+  <h1> Tag </h1>
+  <input type='text' name='tags'>
   <input type='submit' value='Create link'>
 </form>
